--- a/Apache24/htdocs/introphp/index.html
+++ b/Apache24/htdocs/introphp/index.html
@@ -8,14 +8,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
-    <div class="text-center">
+<body class="bg-light p-5">
+    <div class="text-center padding">
         <h2>ejemplo operaciones</h2>
+        <br>
         <form action="operaciones.php" method="POST">
         Numero 1:
         <input type="number" name="num1" id="num1"><br>
         Numero 2:
-        <input type="number" name="num2" id="num2"><br>
+        <input type="number" name="num2" id="num2"><br> <br>
         Seleccione la operacion a realizar:
         <br>
         <select name="Operacion">
@@ -24,7 +25,7 @@
             <option value="multiplicacion">Multiplicacion</option>
             <option value="division">Division</option>
         </select> <br>
-        <input type="submit" name="enviar" id="Procesar">
+        <input class="btn btn-danger" type="submit" name="enviar" id="Procesar">
     </form>
     </div>
     
